@@ -1,5 +1,8 @@
 package com.example.airdns.domain.room.converter;
 
+import com.example.airdns.domain.equipment.dto.EquipmentsResponseDto;
+import com.example.airdns.domain.equipment.entity.Equipments;
+import com.example.airdns.domain.equipmentcategory.entity.EquipmentCategories;
 import com.example.airdns.domain.image.entity.Images;
 import com.example.airdns.domain.room.dto.RoomsRequestDto;
 import com.example.airdns.domain.room.dto.RoomsResponseDto;
@@ -7,24 +10,11 @@ import com.example.airdns.domain.room.dto.RoomsSearchConditionDto;
 import com.example.airdns.domain.room.entity.Rooms;
 import com.example.airdns.domain.user.entity.Users;
 
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class RoomsConverter {
 
-    public static RoomsResponseDto.ReadRoomsResponseDto toDto(
-            RoomsRequestDto.UpdateRoomsRequestDto updateDto,
-            Rooms rooms) {
-        rooms.updateRooms(
-                updateDto.getName(),
-                updateDto.getPrice(),
-                updateDto.getAddress(),
-                updateDto.getSize(),
-                updateDto.getDesc(),
-                updateDto.getIsClosed()
-        );
-
-        return toDto(rooms);
-    }
     public static Rooms toEntity(RoomsRequestDto.CreateRoomsRequestDto requestDto, Users users) {
         return Rooms.builder()
                 .users(users)
@@ -37,21 +27,27 @@ public class RoomsConverter {
     }
 
     public static RoomsResponseDto.ReadRoomsResponseDto toDto(Rooms rooms) {
+        List<Map<String, Object>> equipments = getEquipmentListByRooms(rooms);
+
         return RoomsResponseDto.ReadRoomsResponseDto.builder()
+                .roomsId(rooms.getId())
                 .name(rooms.getName())
                 .price(rooms.getPrice())
                 .address(rooms.getAddress())
                 .size(rooms.getSize())
                 .desc(rooms.getDescription())
-                .equipment(
-                        rooms.getRoomEquipmentsList().stream()
-                            .map((roomEquipments) -> roomEquipments.getEquipments().getId())
-                            .collect(Collectors.toList())
-                )
+                .equipment(equipments)
                 .imageUrl(
                         rooms.getImagesList().stream()
                             .map((Images::getImageUrl))
-                            .collect(Collectors.toList())
+                            .toList()
+                )
+                .reservatedTimeList(
+                        rooms.getReservationList().stream()
+                                .map(reservation -> Arrays.asList(
+                                        reservation.getCheckIn(), reservation.getCheckOut()
+                                ))
+                                .toList()
                 )
                 .build();
     }
@@ -75,5 +71,40 @@ public class RoomsConverter {
                 .endSize(requestDto.getSize() != null ? requestDto.getSize().get(1) : null)
                 .equpmentList(requestDto.getEquipment())
                 .build();
+    }
+
+    private static List<Map<String, Object>> getEquipmentListByRooms(Rooms rooms) {
+        List<Map<String, Object>> equipmentList = new ArrayList<>();
+
+        // map (CategoryId, equipment) 생성
+        Map<EquipmentCategories, List<EquipmentsResponseDto.ReadEquipmentsResponseDto>> equipmentsMap = new HashMap<>();
+
+        rooms.getRoomEquipmentsList()
+                .forEach((roomEquipments) -> {
+                    Equipments equipments = roomEquipments.getEquipments();
+                    EquipmentCategories category = equipments.getEquipmentCategories();
+                    List<EquipmentsResponseDto.ReadEquipmentsResponseDto> responseList =
+                            equipmentsMap.getOrDefault(category, new ArrayList<>());
+
+                    responseList.add(
+                            EquipmentsResponseDto.ReadEquipmentsResponseDto.builder()
+                                    .id(equipments.getId())
+                                    .name(equipments.getName())
+                                    .build()
+                    );
+
+                    equipmentsMap.put(category, responseList);
+                });
+
+        equipmentsMap.keySet().stream().sorted(Comparator.comparingLong(EquipmentCategories::getId))
+                .forEach( category -> {
+                            Map<String, Object> categoryResponseMap = new HashMap<>();
+                            categoryResponseMap.put("label", category.getName());
+                            categoryResponseMap.put("options", equipmentsMap.get(category));
+                            equipmentList.add(categoryResponseMap);
+                        }
+                );
+
+        return equipmentList;
     }
 }
